crates/ast/tests/snapshots/ast__new_casted_parameter.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    AstNewClass {
        range: AstRange {
            start: AstPoint { 0:1 },
            end: AstPoint { 0:34 },
        },
        jtype: AstJType {
            annotated: [],
            range: AstRange {
                start: AstPoint { 0:5 },
                end: AstPoint { 0:16 },
            },
            value: Class(
                AstIdentifier {
                    range: AstRange {
                        start: AstPoint { 0:5 },
                        end: AstPoint { 0:16 },
                    },
                    value: "HandleTable",
                },
            ),
        },
        rhs: Parameters(
            AstRange {
                start: AstPoint { 0:5 },
                end: AstPoint { 0:34 },
            },
            [
                [
                    Base(
                        AstBaseExpression {
                            range: AstRange {
                                start: AstPoint { 0:19 },
                                end: AstPoint { 0:21 },
                            },
                            ident: Some(
                                Value(
                                    Nuget(
                                        Int(
                                            AstInt {
                                                range: AstRange {
                                                    start: AstPoint { 0:19 },
                                                    end: AstPoint { 0:21 },
                                                },
                                                value: "10",
                                            },
                                        ),
                                    ),
                                ),
                            ),
                            values: None,
                            operator: None,
                        },
                    ),
                ],
                [
                    Casted(
                        AstCastedExpression {
                            range: AstRange {
                                start: AstPoint { 0:21 },
                                end: AstPoint { 0:28 },
                            },
                            cast: AstJType {
                                annotated: [],
                                range: AstRange {
                                    start: AstPoint { 0:22 },
                                    end: AstPoint { 0:27 },
                                },
                                value: Float,
                            },
                        },
                    ),
                    Base(
                        AstBaseExpression {
                            range: AstRange {
                                start: AstPoint { 0:30 },
                                end: AstPoint { 0:35 },
                            },
                            ident: Some(
                                Value(
                                    Nuget(
                                        Float(
                                            AstDouble {
                                                range: AstRange {
                                                    start: AstPoint { 0:30 },
                                                    end: AstPoint { 0:31 },
                                                },
                                                value: "3.00",
                                            },
                                        ),
                                    ),
                                ),
                            ),
                            values: None,
                            operator: None,
                        },
                    ),
                ],
            ],
        ),
    },
    12,
)
