crates/ast/tests/snapshots/ast__new_string.snap
---
source: crates/ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    AstBlockReturn {
        range: AstRange {
            start: AstPoint { 1:5 },
            end: AstPoint { 1:25 },
        },
        expression: Expression(
            [
                NewClass(
                    AstNewClass {
                        range: AstRange {
                            start: AstPoint { 1:12 },
                            end: AstPoint { 1:24 },
                        },
                        jtype: AstJType {
                            annotated: [],
                            range: AstRange {
                                start: AstPoint { 1:16 },
                                end: AstPoint { 1:22 },
                            },
                            value: Class(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint { 1:16 },
                                        end: AstPoint { 1:22 },
                                    },
                                    value: "String",
                                },
                            ),
                        },
                        rhs: Parameters(
                            AstRange {
                                start: AstPoint { 1:16 },
                                end: AstPoint { 1:24 },
                            },
                            [],
                        ),
                    },
                ),
            ],
        ),
    },
    6,
)
