crates/ast/tests/snapshots/ast__nuget_long_underscore.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    Nuget(
        Long(
            AstInt {
                range: AstRange {
                    start: AstPoint { 0:14 },
                    end: AstPoint { 0:28 },
                },
                value: "10_000_000_000",
            },
        ),
    ),
    2,
)
