crates/ast/tests/snapshots/ast__parameter_class_function_pass.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    [
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:0 },
                    end: AstPoint { 0:7 },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:0 },
                                end: AstPoint { 0:7 },
                            },
                            value: "toArray",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:7 },
                    end: AstPoint { 0:24 },
                },
                ident: None,
                values: Some(
                    AstValues {
                        range: AstRange {
                            start: AstPoint { 0:7 },
                            end: AstPoint { 0:24 },
                        },
                        values: [
                            [
                                Base(
                                    AstBaseExpression {
                                        range: AstRange {
                                            start: AstPoint { 0:8 },
                                            end: AstPoint { 0:13 },
                                        },
                                        ident: Some(
                                            Identifier(
                                                AstIdentifier {
                                                    range: AstRange {
                                                        start: AstPoint { 0:8 },
                                                        end: AstPoint { 0:13 },
                                                    },
                                                    value: "Class",
                                                },
                                            ),
                                        ),
                                        values: None,
                                        operator: None,
                                    },
                                ),
                                Generics(
                                    AstGenerics {
                                        range: AstRange {
                                            start: AstPoint { 0:13 },
                                            end: AstPoint { 0:16 },
                                        },
                                        jtypes: [
                                            AstJType {
                                                annotated: [],
                                                range: AstRange {
                                                    start: AstPoint { 0:14 },
                                                    end: AstPoint { 0:16 },
                                                },
                                                value: Wildcard,
                                            },
                                        ],
                                    },
                                ),
                                Base(
                                    AstBaseExpression {
                                        range: AstRange {
                                            start: AstPoint { 0:16 },
                                            end: AstPoint { 0:18 },
                                        },
                                        ident: Some(
                                            EmptyArrayAccess,
                                        ),
                                        values: None,
                                        operator: None,
                                    },
                                ),
                                Base(
                                    AstBaseExpression {
                                        range: AstRange {
                                            start: AstPoint { 0:18 },
                                            end: AstPoint { 0:20 },
                                        },
                                        ident: None,
                                        values: None,
                                        operator: ColonColon(
                                            AstRange {
                                                start: AstPoint { 0:18 },
                                                end: AstPoint { 0:18 },
                                            },
                                        ),
                                    },
                                ),
                                Base(
                                    AstBaseExpression {
                                        range: AstRange {
                                            start: AstPoint { 0:20 },
                                            end: AstPoint { 0:23 },
                                        },
                                        ident: Some(
                                            Identifier(
                                                AstIdentifier {
                                                    range: AstRange {
                                                        start: AstPoint { 0:20 },
                                                        end: AstPoint { 0:23 },
                                                    },
                                                    value: "new",
                                                },
                                            ),
                                        ),
                                        values: None,
                                        operator: None,
                                    },
                                ),
                            ],
                        ],
                    },
                ),
                operator: None,
            },
        ),
    ],
    12,
)
