crates/ast/tests/snapshots/ast__parmeter_class_function_pass.snap
---
source: ast/tests/ast.rs
expression: parsed
snapshot_kind: text
---
(
    [
        Recursive(
            AstRecursiveExpression {
                range: AstRange {
                    start: AstPoint {
                        line: 0,
                        col: 0,
                    },
                    end: AstPoint {
                        line: 0,
                        col: 7,
                    },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint {
                                    line: 0,
                                    col: 0,
                                },
                                end: AstPoint {
                                    line: 0,
                                    col: 7,
                                },
                            },
                            value: "toArray",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Recursive(
            AstRecursiveExpression {
                range: AstRange {
                    start: AstPoint {
                        line: 0,
                        col: 7,
                    },
                    end: AstPoint {
                        line: 0,
                        col: 24,
                    },
                },
                ident: None,
                values: Some(
                    AstValues {
                        range: AstRange {
                            start: AstPoint {
                                line: 0,
                                col: 7,
                            },
                            end: AstPoint {
                                line: 0,
                                col: 24,
                            },
                        },
                        values: [
                            [
                                Recursive(
                                    AstRecursiveExpression {
                                        range: AstRange {
                                            start: AstPoint {
                                                line: 0,
                                                col: 8,
                                            },
                                            end: AstPoint {
                                                line: 0,
                                                col: 13,
                                            },
                                        },
                                        ident: Some(
                                            Identifier(
                                                AstIdentifier {
                                                    range: AstRange {
                                                        start: AstPoint {
                                                            line: 0,
                                                            col: 8,
                                                        },
                                                        end: AstPoint {
                                                            line: 0,
                                                            col: 13,
                                                        },
                                                    },
                                                    value: "Class",
                                                },
                                            ),
                                        ),
                                        values: None,
                                        operator: None,
                                    },
                                ),
                                Generics(
                                    AstGenerics {
                                        range: AstRange {
                                            start: AstPoint {
                                                line: 0,
                                                col: 13,
                                            },
                                            end: AstPoint {
                                                line: 0,
                                                col: 16,
                                            },
                                        },
                                        jtypes: [
                                            AstJType {
                                                range: AstRange {
                                                    start: AstPoint {
                                                        line: 0,
                                                        col: 14,
                                                    },
                                                    end: AstPoint {
                                                        line: 0,
                                                        col: 16,
                                                    },
                                                },
                                                value: Wildcard,
                                            },
                                        ],
                                    },
                                ),
                                Recursive(
                                    AstRecursiveExpression {
                                        range: AstRange {
                                            start: AstPoint {
                                                line: 0,
                                                col: 16,
                                            },
                                            end: AstPoint {
                                                line: 0,
                                                col: 18,
                                            },
                                        },
                                        ident: Some(
                                            EmptyArrayAccess,
                                        ),
                                        values: None,
                                        operator: None,
                                    },
                                ),
                                Recursive(
                                    AstRecursiveExpression {
                                        range: AstRange {
                                            start: AstPoint {
                                                line: 0,
                                                col: 18,
                                            },
                                            end: AstPoint {
                                                line: 0,
                                                col: 20,
                                            },
                                        },
                                        ident: None,
                                        values: None,
                                        operator: ColonColon(
                                            AstRange {
                                                start: AstPoint {
                                                    line: 0,
                                                    col: 18,
                                                },
                                                end: AstPoint {
                                                    line: 0,
                                                    col: 18,
                                                },
                                            },
                                        ),
                                    },
                                ),
                                Recursive(
                                    AstRecursiveExpression {
                                        range: AstRange {
                                            start: AstPoint {
                                                line: 0,
                                                col: 20,
                                            },
                                            end: AstPoint {
                                                line: 0,
                                                col: 23,
                                            },
                                        },
                                        ident: Some(
                                            Identifier(
                                                AstIdentifier {
                                                    range: AstRange {
                                                        start: AstPoint {
                                                            line: 0,
                                                            col: 20,
                                                        },
                                                        end: AstPoint {
                                                            line: 0,
                                                            col: 23,
                                                        },
                                                    },
                                                    value: "new",
                                                },
                                            ),
                                        ),
                                        values: None,
                                        operator: None,
                                    },
                                ),
                            ],
                        ],
                    },
                ),
                operator: None,
            },
        ),
    ],
    12,
)
