crates/ast/tests/snapshots/ast__return_casted_newclass.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    AstBlockReturn {
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:41 },
        },
        expression: Expression(
            [
                Casted(
                    AstCastedExpression {
                        range: AstRange {
                            start: AstPoint { 0:7 },
                            end: AstPoint { 0:19 },
                        },
                        cast: AstJType {
                            annotated: [],
                            range: AstRange {
                                start: AstPoint { 0:8 },
                                end: AstPoint { 0:18 },
                            },
                            value: Array(
                                AstJType {
                                    annotated: [],
                                    range: AstRange {
                                        start: AstPoint { 0:8 },
                                        end: AstPoint { 0:16 },
                                    },
                                    value: Generic(
                                        AstIdentifier {
                                            range: AstRange {
                                                start: AstPoint { 0:8 },
                                                end: AstPoint { 0:13 },
                                            },
                                            value: "Entry",
                                        },
                                        [
                                            AstJType {
                                                annotated: [],
                                                range: AstRange {
                                                    start: AstPoint { 0:14 },
                                                    end: AstPoint { 0:15 },
                                                },
                                                value: Class(
                                                    AstIdentifier {
                                                        range: AstRange {
                                                            start: AstPoint { 0:14 },
                                                            end: AstPoint { 0:15 },
                                                        },
                                                        value: "T",
                                                    },
                                                ),
                                            },
                                        ],
                                    ),
                                },
                            ),
                        },
                    },
                ),
                NewClass(
                    AstNewClass {
                        range: AstRange {
                            start: AstPoint { 0:20 },
                            end: AstPoint { 0:40 },
                        },
                        jtype: AstJType {
                            annotated: [],
                            range: AstRange {
                                start: AstPoint { 0:24 },
                                end: AstPoint { 0:32 },
                            },
                            value: Generic(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint { 0:24 },
                                        end: AstPoint { 0:29 },
                                    },
                                    value: "Entry",
                                },
                                [
                                    AstJType {
                                        annotated: [],
                                        range: AstRange {
                                            start: AstPoint { 0:30 },
                                            end: AstPoint { 0:32 },
                                        },
                                        value: Wildcard,
                                    },
                                ],
                            ),
                        },
                        rhs: ArrayParameters(
                            [
                                [
                                    [
                                        Base(
                                            AstBaseExpression {
                                                range: AstRange {
                                                    start: AstPoint { 0:33 },
                                                    end: AstPoint { 0:39 },
                                                },
                                                ident: Some(
                                                    Identifier(
                                                        AstIdentifier {
                                                            range: AstRange {
                                                                start: AstPoint { 0:33 },
                                                                end: AstPoint { 0:39 },
                                                            },
                                                            value: "length",
                                                        },
                                                    ),
                                                ),
                                                values: None,
                                                operator: None,
                                            },
                                        ),
                                    ],
                                ],
                            ],
                        ),
                    },
                ),
            ],
        ),
    },
    18,
)
