crates/ast/tests/snapshots/ast__skip_comments.snap
---
source: crates/ast/tests/ast.rs
expression: parsed.unwrap()
---
AstFile {
    package: Some(
        AstPackage {
            range: AstRange {
                start: AstPoint { 1:0 },
                end: AstPoint { 1:22 },
            },
            annotated: [],
            name: AstIdentifier {
                range: AstRange {
                    start: AstPoint { 1:8 },
                    end: AstPoint { 1:21 },
                },
                value: "ch.emilycares",
            },
        },
    ),
    imports: Some(
        AstImports {
            range: AstRange {
                start: AstPoint { 3:0 },
                end: AstPoint { 1:22 },
            },
            imports: [],
        },
    ),
    things: [
        Class(
            AstClass {
                range: AstRange {
                    start: AstPoint { 3:0 },
                    end: AstPoint { 13:1 },
                },
                availability: AstAvailability(
                    Public,
                ),
                attributes: AstThingAttributes(
                    0x0,
                ),
                annotated: [],
                name: AstIdentifier {
                    range: AstRange {
                        start: AstPoint { 3:13 },
                        end: AstPoint { 3:23 },
                    },
                    value: "Everything",
                },
                type_parameters: None,
                superclass: [],
                implements: [],
                permits: [],
                block: AstClassBlock {
                    variables: [
                        AstClassVariable {
                            range: AstRange {
                                start: AstPoint { 5:4 },
                                end: AstPoint { 5:29 },
                            },
                            availability: AstAvailability(
                                Public,
                            ),
                            annotated: [],
                            name: AstIdentifier {
                                range: AstRange {
                                    start: AstPoint { 5:15 },
                                    end: AstPoint { 5:29 },
                                },
                                value: "publicproperty",
                            },
                            jtype: AstJType {
                                annotated: [],
                                range: AstRange {
                                    start: AstPoint { 5:11 },
                                    end: AstPoint { 5:14 },
                                },
                                value: Int,
                            },
                            expression: None,
                            volatile_transient: AstVolatileTransient(
                                0x0,
                            ),
                        },
                        AstClassVariable {
                            range: AstRange {
                                start: AstPoint { 7:4 },
                                end: AstPoint { 7:31 },
                            },
                            availability: AstAvailability(
                                Private,
                            ),
                            annotated: [],
                            name: AstIdentifier {
                                range: AstRange {
                                    start: AstPoint { 7:16 },
                                    end: AstPoint { 7:31 },
                                },
                                value: "privateproperty",
                            },
                            jtype: AstJType {
                                annotated: [],
                                range: AstRange {
                                    start: AstPoint { 7:12 },
                                    end: AstPoint { 7:15 },
                                },
                                value: Int,
                            },
                            expression: None,
                            volatile_transient: AstVolatileTransient(
                                0x0,
                            ),
                        },
                        AstClassVariable {
                            range: AstRange {
                                start: AstPoint { 12:4 },
                                end: AstPoint { 12:31 },
                            },
                            availability: AstAvailability(
                                Private,
                            ),
                            annotated: [],
                            name: AstIdentifier {
                                range: AstRange {
                                    start: AstPoint { 12:16 },
                                    end: AstPoint { 12:31 },
                                },
                                value: "privateproperty",
                            },
                            jtype: AstJType {
                                annotated: [],
                                range: AstRange {
                                    start: AstPoint { 12:12 },
                                    end: AstPoint { 12:15 },
                                },
                                value: Int,
                            },
                            expression: None,
                            volatile_transient: AstVolatileTransient(
                                0x0,
                            ),
                        },
                    ],
                    methods: [],
                    constructors: [],
                    static_blocks: [],
                    inner: [],
                    blocks: [],
                },
            },
        ),
    ],
    modules: [],
}
