crates/ast/tests/snapshots/ast__superee.snap
---
source: crates/ast/tests/ast.rs
expression: parsed.unwrap()
---
AstFile {
    package: Some(
        AstPackage {
            range: AstRange {
                start: AstPoint { 0:0 },
                end: AstPoint { 0:22 },
            },
            annotated: [],
            name: AstIdentifier {
                range: AstRange {
                    start: AstPoint { 0:8 },
                    end: AstPoint { 0:21 },
                },
                value: "ch.emilycares",
            },
        },
    ),
    imports: Some(
        AstImports {
            range: AstRange {
                start: AstPoint { 2:0 },
                end: AstPoint { 2:27 },
            },
            imports: [
                AstImport {
                    range: AstRange {
                        start: AstPoint { 2:0 },
                        end: AstPoint { 2:27 },
                    },
                    unit: Class(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 2:7 },
                                end: AstPoint { 2:26 },
                            },
                            value: "java.io.IOException",
                        },
                    ),
                },
            ],
        },
    ),
    things: [
        Class(
            AstClass {
                range: AstRange {
                    start: AstPoint { 4:0 },
                    end: AstPoint { 5:1 },
                },
                availability: AstAvailability(
                    Public,
                ),
                attributes: AstThingAttributes(
                    0x0,
                ),
                annotated: [],
                name: AstIdentifier {
                    range: AstRange {
                        start: AstPoint { 4:13 },
                        end: AstPoint { 4:18 },
                    },
                    value: "Super",
                },
                type_parameters: None,
                superclass: [
                    Name(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 4:27 },
                                end: AstPoint { 4:38 },
                            },
                            value: "IOException",
                        },
                    ),
                ],
                implements: [],
                permits: [],
                block: AstClassBlock {
                    variables: [],
                    methods: [],
                    constructors: [],
                    static_blocks: [],
                    inner: [],
                    blocks: [],
                },
            },
        ),
    ],
    modules: [],
}
